# meltables

./: README.md
SplineEditor/: CMakeLists.txt
SplineEditor/cmake/: FindLIBIGL.cmake
SplineEditor/src/: branched_meltable.cpp  branched_meltable.h  bspline.cpp  bspline.h  drawing.cpp  drawing.h  handle.cpp  handle.hpp  main.cpp  meltable.cpp  meltable.h  meltable2mesh.cpp  util.cpp  util.h
